# RealEstateEngineering

./: .env.example  .gitignore  Architecture.drawio  README.md  docker-compose.airflow.yml  docker-compose.seed.yml  docker-compose.yml  openlineage.env  pyproject.toml  requirements.txt
docker/: dockerfile.airflow  dockerfile.spark  entrypoint.sh  init-db.sh  seed.sh  wait-for-it.sh
realestatescrape/crawler/: apt_entry_crawler.py  laendleimmo_crawler.py  user_agents.py
realestatescrape/dags/: laendleimmo.py
realestatescrape/data/: apt_data.csv  apt_dump.csv
tests/: test_realestatescrape.py
