[tool.poetry]
name = "realEstateScrape"
version = "0.1.0"
description = ""
authors = ["Stefan Mikic <https://github.com/stejul>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.1"
openlineage-airflow = "^0.8.1"
apache-airflow = "^2.3.0"
pandas = "^1.4.3"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
